--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,33 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/src/node_modules
+/node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
+# build out
+dist/
+build/
 
 # production
-/dist
+dist
 /.wrangler
 /node_modules
 
-# misc
+# Environment variables
+.env
 
-
+# Logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 node_modules
 package-lock.json
+
+# Editor folders
+.vscode/
+.idea/
+
+# OS files
+.DS_Store
+Thumbs.db
